// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Download component matches the snapshot 1`] = `
<div
  className="iqMgVR"
>
  <span
    className="bIVdbV"
  >
    Yoast SEO
  </span>
  <p
    className="hTVMCQ"
  >
     
    version 4.7
  </p>
  <img
    alt=""
    className="bAfIbR"
    src="Yoast_SEO_Icon_Small.svg"
  />
  <ul
    className="boOFOz"
  >
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Wordpress"
        className="iipSSv"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Wordpress
      </p>
    </li>
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Drupal"
        className="iipSSv"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Drupal
      </p>
    </li>
  </ul>
</div>
`;

exports[`The Download component without a currentVersion matches the snapshot 1`] = `
<div
  className="iqMgVR"
>
  <span
    className="bIVdbV"
  >
    Yoast SEO
  </span>
  
  <img
    alt=""
    className="bAfIbR"
    src="Yoast_SEO_Icon_Small.svg"
  />
  <ul
    className="boOFOz"
  >
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Wordpress"
        className="iipSSv"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Wordpress
      </p>
    </li>
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Drupal"
        className="iipSSv"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Drupal
      </p>
    </li>
  </ul>
</div>
`;
